--- a/5/src/assets/forms/madLib.html
+++ b/5/src/assets/forms/madLib.html
@@ -1,14 +1,14 @@
-  <form action="assets/includes/displayMadLib.php" method="post">
-      <input type="text"  neam="plural_noun_one" value="plural noun" />
-      <input type="text"  neam="plural_noun_two" value="plural noun" />
-      <input type="text"  neam="adjective_one" value="adjective" />
-      <input type="text"  neam="noun_one" value="noun" />
-      <input type="text"  neam="adjective_two" value="adjective" />
-      <input type="text"  neam="adjective_three" value="adjective" />
-      <input type="text"  neam="verb" value="verb"/>
-      <input type="text"  neam="body_part" value="body part"/>
-      <input type="text"  neam="adjective_four" value="adjective" />
-      <input type="text" neam="number" value="number" />
-      <input type="text"  neam="noun_two" value="noun" />
-      <input type="submit"/>
-  </form>
+<form action="assets/includes/displayMadLib.php" method="post">
+    <input type="text"  name="plural_noun_one" value="plural noun" />
+    <input type="text"  name="plural_noun_two" value="plural noun" />
+    <input type="text"  name="adjective_one" value="adjective" />
+    <input type="text"  name="noun_one" value="noun" />
+    <input type="text"  name="adjective_two" value="adjective" />
+    <input type="text"  name="adjective_three" value="adjective" />
+    <input type="text"  name="verb" value="verb"/>
+    <input type="text"  name="body_part" value="body part"/>
+    <input type="text"  name="adjective_four" value="adjective" />
+    <input type="text"  name="number" value="number" />
+    <input type="text"  name="noun_two" value="noun" />
+    <input type="submit" name="updateMadLib" value="View MadLib"/>
+</form>
