--- a/5/src/assets/forms/madLib.html
+++ b/5/src/assets/forms/madLib.html
@@ -10,5 +10,5 @@
     <input type="text"  name="adjective_four" value="adjective" />
     <input type="text"  name="number" value="number" />
     <input type="text"  name="noun_two" value="noun" />
-    <input type="submit" name="updateMadLib" value="View MadLib"/>
+    <input type="submit" name="updateMadLib" value="Submit MadLib"/>
 </form>
