--- a/5/src/assets/forms/login.html
+++ b/5/src/assets/forms/login.html
@@ -1,5 +1,5 @@
 <form action="user.php" method="post">
   Email: <input type="email" name="email" value="" required/>
   Password: <input type="password" name="passwd" value="" required/>
-  <input type="submit" name="action" value="Log In" />
+  <input type="submit" class="button" name="action" value="Log In" />
 </form>
