--- a/6/assets/forms/login.html
+++ b/6/assets/forms/login.html
@@ -1,5 +1,5 @@
 <form action='assets/include/login.php' method='POST'> 
-	<input type='email' name='uname'/>
-	<input type='password' name='passwd'/>
+	Email:<input type='email' name='uname'/>
+	Password:<input type='password' name='passwd'/>
 	<input type='submit' value='LogIn'/>
 </form>
